--- a/programming.html
+++ b/programming.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Unique Developer</title>
+	<title>Knowledge Dot</title>
 	<!----css file link-->
 	<link rel="stylesheet" type="text/css" href="css/programming.css">
 
@@ -67,7 +67,7 @@ background: linear-gradient(to right, #480048, #C04848); /* W3C, IE 10+/ Edge, F
 
 				</button>
 
-				<h1 style="color: white;margin-top: 10px;" id="myhead">Unique Developer</h1>
+				<h1 style="color: white;margin-top: 10px;" id="myhead">Knowledge Dot</h1>
 			</div>
 			<div class="collapse navbar-collapse" id="navi">
                  <!------Navigation menus starts---->
