--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
 
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-	<title>Unique Developer</title>
+	<title>Knowledge Dot</title>
 	<!----Linking google fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
@@ -48,7 +48,7 @@
 
 				</button>
 
-				<h1 style="color: white;margin-top: 10px;" id="myhead">Unique Developer</h1>
+				<h1 style="color: white;margin-top: 10px;" id="myhead">Knowledge Dot</h1>
 			</div>
 			<div class="collapse navbar-collapse" id="navi">
                  <!------Navigation menus starts---->
